Fix flex alignment in modals

--- a/frames/src/App.css
+++ b/frames/src/App.css
@@ -24,8 +24,6 @@
 
 .move-modal-body {
   display: flex;
-}
-
-.move-image {
   align-items: center;
+  justify-content: center;
 }
